--- a/tenants/whitman/client/index.html
+++ b/tenants/whitman/client/index.html
@@ -81,29 +81,30 @@
                         <div>
                             <p class="font-bold text-primary">Keteneinde</p>
                             <p>
-                                Veldmelding → Ticket Masala API → AI-prioritering → Dispatch naar
-                                correcte ploeg.
+                                Veldmelding → Ticket Masala API → GERDA AI → dispatch naar correcte
+                                ploeg en zone.
                             </p>
                         </div>
                         <div>
                             <p class="font-bold text-primary">AI-signalen</p>
                             <p>
-                                GPS-coördinaten, urgentie en type interventie sturen routing en
-                                SLA-niveaus.
+                                GPS-coördinaten, urgentie en type interventie sturen routing,
+                                prioritering en SLA-niveaus.
                             </p>
                         </div>
                         <div>
-                            <p class="font-bold text-primary">Doelwaarden</p>
+                            <p class="font-bold text-primary">Demo-profielen</p>
                             <p>
-                                Demo-profiel stuurt op P95-responstijd &lt; 250&nbsp;ms en ter
-                                plaatse binnen 45&nbsp;min.
+                                <span class="text-warning">Operations</span>
+                                focust op dagelijkse storingen met evenwichtige responstijden.
                             </p>
                             <p class="mt-1">
-                                Profielen:
-                                <span class="text-warning">Operations</span>
-                                (dagelijkse storingen) en
                                 <span class="text-warning">Emergency</span>
-                                (kritieke incidenten).
+                                prioriteert kritieke incidenten langs druk bereden trajecten.
+                            </p>
+                            <p class="mt-1">
+                                Doelwaarden: P95 responstijd &lt; 250&nbsp;ms en ter plaatse binnen
+                                45&nbsp;min.
                             </p>
                         </div>
                     </div>
