feat: add runtime configuration script to tenant pages
Add config.js script to all tenant index.html files to enable runtime configuration. This change centralizes configuration management across all tenants.

--- a/tenants/hennessey/client/index.html
+++ b/tenants/hennessey/client/index.html
@@ -14,6 +14,8 @@
         <link rel="icon" type="image/png" sizes="32x32" href="images/favicon-32x32.png" />
         <link rel="icon" type="image/png" sizes="16x16" href="images/favicon-16x16.png" />
         <link rel="apple-touch-icon" sizes="180x180" href="images/apple-touch-icon.png" />
+        <!-- Runtime Configuration -->
+        <script src="/config.js"></script>
         <!-- Main Style Bundle (Vite) -->
         <script type="module" src="../../../src/main.js"></script>
     </head>
@@ -70,7 +72,8 @@
                             Volledige flow
                         </p>
                         <p>
-                            Portaal indiening → Geschiktheids- en verdienstescore → Portfolio-bewuste routing naar beoordelaars.
+                            Portaal indiening → Geschiktheids- en verdienstescore →
+                            Portfolio-bewuste routing naar beoordelaars.
                         </p>
                     </div>
                     <div class="space-y-1">
@@ -80,7 +83,8 @@
                             AI-signalen
                         </p>
                         <p>
-                            Aangevraagd bedrag, duur en abstractlengte voeden de rangschikking en schatting van documentcomplexiteit.
+                            Aangevraagd bedrag, duur en abstractlengte voeden de rangschikking en
+                            schatting van documentcomplexiteit.
                         </p>
                     </div>
                     <div class="space-y-1">
@@ -90,7 +94,8 @@
                             Prestatiedoelen
                         </p>
                         <p>
-                            Configuratie codeert beoordelings- en beslissings-SLA's (30/60 dagen) voor dit financieringsprogramma.
+                            Configuratie codeert beoordelings- en beslissings-SLA's (30/60 dagen)
+                            voor dit financieringsprogramma.
                         </p>
                     </div>
                     <div class="space-y-1 md:col-span-3">
