--- a/tenants/whitman/client/index.html
+++ b/tenants/whitman/client/index.html
@@ -1,10 +1,10 @@
 <!doctype html>
 <html lang="nl" data-theme="whitman">
     <head>
-        5→
         <meta charset="UTF-8" />
-        6→
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <!-- Runtime Configuration -->
+        <script src="/config.js"></script>
         <title>Meldpunt Spoor - Whitman Spoor</title>
         <!-- FontAwesome -->
         <link
