--- a/tenants/liberty/client/index.html
+++ b/tenants/liberty/client/index.html
@@ -17,6 +17,8 @@
         <script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.9.0/highlight.min.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/marked/11.1.1/marked.min.js"></script>
         <link rel="manifest" href="manifest.json" />
+        <!-- Runtime Configuration -->
+        <script src="/config.js"></script>
         <!-- Favicon -->
         <link rel="icon" type="image/png" sizes="32x32" href="images/favicon-32x32.png" />
         <link rel="icon" type="image/png" sizes="16x16" href="images/favicon-16x16.png" />
